feat: fix slot-vitamin linking across all weeks - Look up vitamins by day+time instead of slot foreign key - Remove slot foreign key from ScheduleEntry entity - Update PollCommandService to resolve slot number via day+time lookup - Add findByUserAndDayAndTime to ScheduleEntryRepository